<resources>
    <string name="app_name">Movies</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="up_coming">Up Coming</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="index">index</string>
    <string name="movie_type">movieType</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="poster">poster</string>
    <string name="sort">Sort</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="trailer1">Trailer1</string>
    <string name="trailer2">Trailer2</string>
    <string name="play">play</string>
    <string name="favorite">favorite</string>
    <string name="no_reviews">There is no reviews yet!</string>
    <string name="temp_txt">Blah Blah Blah</string>
    <string name="refresh">Refresh</string>
    //TODO change api key to yours
    <string name="api_key">***************************</string>>
</resources>