...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playTrailer1Img"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/play"
                app:srcCompat="@drawable/play_button"
...
